full localization of the app

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,66 @@
 {
    "ERR_NICKNAMEINUSE": "Nickname '%s' is already in use.",
    "ERR_INVITEONLYCHAN": "Unable to join channel %s (invite only).",
-   "ERR_BADCHANNELKEY": "Unable to join channel %s (need correct key)."
+   "ERR_BADCHANNELKEY": "Unable to join channel %s (need correct key).",
+   "ERR_CHANNELISFULL": "Unable to join channel %s (channel is full)",
+   "PLACEHOLDER_SEND_MESSAGE": "Send Message …",
+   "CONNECTING_TO": "* Connecting to %s (%d)",
+   "DISCONNECTED": "* Disconnected (%s)",
+   "DISPLAY_HOST": "%s is now your displayed host.",
+   "WHOIS_REPLY_1": "%s is %s@%s * %s",
+   "WHOIS_REPLY_2": "%s is on %s",
+   "WHOIS_REPLY_3": "%s is away: %s",
+   "WHOIS_REPLY_4": "%s is using %s %s",
+   "WHOIS_REPLY_5": "%s is has been idle %s",
+   "WHOIS_REPLY_6": "%s End of /WHOIS list.",
+   "MOTD_TITLE": " - %s Message of the Day - ",
+   "ECONNREFUSED": "* Couldn't connect to server (Connection refused)",
+   "ECONNRESET": "* Disconnected (Connection Reset)",
+   "ENOTFOUND": "* Unable to resolve server",
+   "NETWORK_INFO_1": "There are %d users and %d invisible on %d servers",
+   "NETWORK_INFO_2": "%d channels formed",
+   "NETWORK_INFO_3": "I have %d clients and %d servers",
+   "PING_REPLY": "[%s PING reply]: %d seconds.",
+   "TIME_REPLY": "[%s TIME reply]: %s.",
+   "VERSION_REPLY": "[%s VERSION reply]: %s.",
+   "FINGER_REPLY": "[%s FINGER reply]: %s.",
+   "CLIENTINFO_REPLY": "[%s CLIENTINFO reply]: %s.",
+   "CTCP_SENT_MSG_FORMAT": "[%s %s]",
+   "NOT_ON_A_CHANNEL": "* You are not on a channel",
+   "UNKNOWN_COMMAND": "* Unknown Command",
+   "SERVER_MENU_NETWORK_INFO": "Network Info",
+   "SERVER_MENU_TIME": "Time",
+   "SERVER_MENU_MOTD": "Message of the Day",
+   "SERVER_MENU_QUIT": "Quit jsIRC",
+   "PLACEHOLDER_SEND_MESSAGE": "Send Message …",
+   "WINDOW_TITLE_SERVER": "jsIRC - [Status: %s %s on %s (%s:%d)]",
+   "WINDOW_TITLE_CHANNEL": "jsIRC - [%s (%s, %s)%s]",
+   "WINDOW_TITLE_USER": "jsIRC - [%s %s, %s)]",
+   "USER_SET_CHANNEL_MODE": "sets mode %s %s",
+   "USER_CHANGED_TOPIC": "changed topic to '%s'",
+   "ACTION_SLAP": "slaps %s around a bit with a large trout",
+   "CHANNEL_MODE_LABEL": "Channel Mode",
+   "BAN_LIST_LABEL": "Ban List",
+   "BUTTON_KICK": "Kick",
+   "BUTTON_CANCEL": "Cancel",
+   "KICK_TITLE": "Kick %s",
+   "KICKBAN_TITLE": "Kick & Ban %s",
+   "NO_CHANNEL_TOPIC": "(No Channel Topic)",
+   "USER_MENU_INFO": "Info",
+   "USER_MENU_WHOIS": "Whois",
+   "USER_MENU_CONTROL": "Control",
+   "USER_MENU_CONTROL_OP": "Op",
+   "USER_MENU_CONTROL_DEOP": "Deop",
+   "USER_MENU_CONTROL_VOICE": "Voice",
+   "USER_MENU_CONTROL_DEVOICE": "Devoice",
+   "USER_MENU_CONTROL_KICK": "Kick",
+   "USER_MENU_CONTROL_KICKWHY": "Kick (Why)",
+   "USER_MENU_CONTROL_BAN": "Ban",
+   "USER_MENU_CONTROL_KICKBAN": "Ban, Kick",
+   "USER_MENU_CONTROL_KICKBANWHY": "Ban, Kick (Why)",
+   "USER_MENU_CTCP": "CTCP",
+   "USER_MENU_CTCP_PING": "Ping",
+   "USER_MENU_CTCP_TIME": "Time",
+   "USER_MENU_CTCP_VERSION": "Version",
+   "USER_MENU_SLAP": "Slap"
 }
