Almost auto-generated protocol error handling (401-502)

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,59 @@
 {
-   "ERR_NICKNAMEINUSE": "Nickname '%s' is already in use.",
-   "ERR_INVITEONLYCHAN": "Unable to join channel %s (invite only).",
-   "ERR_BADCHANNELKEY": "Unable to join channel %s (need correct key).",
-   "ERR_CHANNELISFULL": "Unable to join channel %s (channel is full)",
-   "ERR_BANNEDFROMCHAN": "Unable to join channel %s (address is banned)",
+   "ERR_ALREADYREGISTRED": "Unauthorized command (already registered)",
+   "ERR_BADCHANMASK": "Bad Channel Mask",
+   "ERR_BADCHANNELKEY": "Cannot join channel %s (need correct key)",
+   "ERR_BADMASK": "Bad Server/host mask",
+   "ERR_BANLISTFULL": "Channel ban list is full",
+   "ERR_BANNEDFROMCHAN": "Cannot join channel %s (address is banned)",
+   "ERR_CANNOTSENDTOCHAN": "Cannot send to channel",
+   "ERR_CANTKILLSERVER": "You can't kill a server!",
+   "ERR_CHANNELISFULL": "Cannot join channel %s (channel is full)",
+   "ERR_CHANOPRIVSNEEDED": "You're not channel operator",
+   "ERR_ERRONEUSNICKNAME": "Erroneous nickname",
+   "ERR_FILEERROR": "File error doing %s on %s",
+   "ERR_INVITEONLYCHAN": "Cannot join channel %s (invite only)",
+   "ERR_KEYSET": "Channel key already set",
+   "ERR_NEEDMOREPARAMS": "Not enough parameters",
+   "ERR_NICKCOLLISION": "Nickname collision KILL from %s@%s",
+   "ERR_NICKNAMEINUSE": "Nickname '%s' is already in use",
+   "ERR_NOADMININFO": "No administrative info available",
+   "ERR_NOCHANMODES": "Channel doesn't support modes",
+   "ERR_NOLOGIN": "User not logged in",
+   "ERR_NOMOTD": "MOTD File is missing",
+   "ERR_NONICKNAMEGIVEN": "No nickname given",
+   "ERR_NOOPERHOST": "No O-lines for your host",
+   "ERR_NOORIGIN": "No origin specified",
+   "ERR_NOPERMFORHOST": "Your host isn't among the privileged",
+   "ERR_NOPRIVILEGES": "Permission Denied- You're not an IRC operator",
+   "ERR_NORECIPIENT": "No recipient given (%s)",
+   "ERR_NOSUCHCHANNEL": "No such channel",
+   "ERR_NOSUCHNICK": "No such nick/channel",
+   "ERR_NOSUCHSERVER": "No such server",
+   "ERR_NOSUCHSERVICE": "No such service",
+   "ERR_NOTEXTTOSEND": "No text to send",
+   "ERR_NOTONCHANNEL": "You're not on that channel",
+   "ERR_NOTOPLEVEL": "No toplevel domain specified",
+   "ERR_NOTREGISTERED": "You have not registered",
+   "ERR_PASSWDMISMATCH": "Password incorrect",
+   "ERR_RESTRICTED": "Your connection is restricted!",
+   "ERR_SUMMONDISABLED": "SUMMON has been disabled",
+   "ERR_TOOMANYCHANNELS": "You have joined too many channels",
+   "ERR_TOOMANYTARGETS": "%d recipients. %s",
+   "ERR_UMODEUNKNOWNFLAG": "Unknown MODE flag",
+   "ERR_UNAVAILRESOURCE": "Nick/channel is temporarily unavailable",
+   "ERR_UNIQOPPRIVSNEEDED": "You're not the original channel operator",
+   "ERR_UNKNOWNCOMMAND": "Unknown command",
+   "ERR_UNKNOWNMODE": "%s is a unknown mode character to me for %s",
+   "ERR_USERNOTINCHANNEL": "They aren't on that channel",
+   "ERR_USERONCHANNEL": "%s is already on channel %s",
+   "ERR_USERSDISABLED": "USERS has been disabled",
+   "ERR_USERSDONTMATCH": "Cannot change mode for other users",
+   "ERR_WASNOSUCHNICK": "There was no such nickname",
+   "ERR_WILDTOPLEVEL": "Wildcard in toplevel domain",
+   "ERR_YOUREBANNEDCREEP": "You are banned from this server",
+
    "PLACEHOLDER_SEND_MESSAGE": "Send Message …",
+   
    "CONNECTING_TO": "* Connecting to %s (%d)",
    "DISCONNECTED": "* Disconnected (%s)",
    "DISPLAY_HOST": "%s is now your displayed host.",
@@ -15,41 +64,52 @@
    "WHOIS_REPLY_5": "%s is has been idle %s",
    "WHOIS_REPLY_6": "%s End of /WHOIS list.",
    "MOTD_TITLE": " - %s Message of the Day - ",
+   
    "ECONNREFUSED": "* Couldn't connect to server (Connection refused)",
    "ECONNRESET": "* Disconnected (Connection Reset)",
    "ENOTFOUND": "* Unable to resolve server",
+   
    "NETWORK_INFO_1": "There are %d users and %d invisible on %d servers",
    "NETWORK_INFO_2": "%d channels formed",
    "NETWORK_INFO_3": "I have %d clients and %d servers",
+   
    "PING_REPLY": "[%s PING reply]: %d seconds.",
    "TIME_REPLY": "[%s TIME reply]: %s.",
    "VERSION_REPLY": "[%s VERSION reply]: %s.",
    "FINGER_REPLY": "[%s FINGER reply]: %s.",
    "CLIENTINFO_REPLY": "[%s CLIENTINFO reply]: %s.",
    "CTCP_SENT_MSG_FORMAT": "[%s %s]",
+   
    "NOT_ON_A_CHANNEL": "* You are not on a channel",
    "UNKNOWN_COMMAND": "* Unknown Command",
+   
    "SERVER_MENU_NETWORK_INFO": "Network Info",
    "SERVER_MENU_TIME": "Time",
    "SERVER_MENU_MOTD": "Message of the Day",
    "SERVER_MENU_QUIT": "Quit jsIRC",
+   
    "WINDOW_TITLE_SERVER": "jsIRC - [Status: %s %s on %s (%s:%d)]",
    "WINDOW_TITLE_CHANNEL": "jsIRC - [%s (%s, %s)%s]",
    "WINDOW_TITLE_USER": "jsIRC - [%s %s, %s)]",
+   
    "USER_SET_CHANNEL_MODE": "sets mode %s %s",
    "USER_CHANGED_TOPIC": "changed topic to '%s'",
    "ACTION_SLAP": "slaps %s around a bit with a large trout",
    "CHANNEL_MODE_LABEL": "Channel Mode",
    "BAN_LIST_LABEL": "Ban List",
+   
    "BUTTON_OK": "OK",
    "BUTTON_KICK": "Kick",
    "BUTTON_CANCEL": "Cancel",
    "BUTTON_UNBAN": "Unban",
+   "BUTTON_CONNECT": "Connect",
+   
    "KICK_TITLE": "Kick %s",
    "KICKBAN_TITLE": "Kick & Ban %s",
    "NO_CHANNEL_TOPIC": "(No Channel Topic)",
    "NETWORK_MENU_LEAVE": "Leave %s",
    "CHANNEL_MENU_LEAVE": "Leave Channel",
+   
    "USER_MENU_CLOSE": "Close",
    "USER_MENU_INFO": "Info",
    "USER_MENU_WHOIS": "Whois",
@@ -68,8 +128,10 @@
    "USER_MENU_CTCP_TIME": "Time",
    "USER_MENU_CTCP_VERSION": "Version",
    "USER_MENU_SLAP": "Slap",
+   
    "CHAT_MENU_CHANNEL_MODES": "Channel Modes",
    "MENU_REPORT_ISSUE": "Report Issue…",
+   
    "CHANNEL_MODE_OPSTOPIC": "Only ops can change topic",
    "CHANNEL_MODE_LABEL": "Channel Modes",
    "CHANNEL_MODE_SECRET": "Secret",
@@ -85,6 +147,6 @@
    "CONNECT_NICKNAME": "Nickname",
    "CONNECT_NAME": "Name",
    "CONNECT_EMAIL": "Email",
-   "BUTTON_CONNECT": "Connect",
+   
    "USER_SET_MODES": "%s sets mode %s"
 }
