--- a/locales/en.json
+++ b/locales/en.json
@@ -91,7 +91,7 @@
    "SERVER_MENU_MOTD": "Message of the Day",
    "SERVER_MENU_QUIT": "Quit jsIRC",
    
-   "WINDOW_TITLE_SERVER": "%s (%s)",
+   "WINDOW_TITLE_SERVER": "%s %s",
    "WINDOW_TITLE_CHANNEL": "%s - %s",
    "WINDOW_TITLE_CHANNEL_ONE": "%s - %s (%d user) %s",
    "WINDOW_TITLE_CHANNEL_MANY": "%s - %s (%d users) %s",
