--- a/locales/en.json
+++ b/locales/en.json
@@ -157,7 +157,7 @@
    "CONNECT_NAME": "Name",
    "CONNECT_EMAIL": "Email",
    
-   "USER_SET_MODES": "%s sets mode %s",
+   "USER_SET_MODES": "* %s sets mode %s",
    "USER_JOINED_CHANNEL": " has joined %s",
    "USER_LEFT_CHANNEL": " has left %s",
    "USER_KICKED": " was kicked by %s %s",
